--- a/teste.html
+++ b/teste.html
@@ -7,43 +7,77 @@
     <title>Mapa de Obras</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
-        #map {
-            height: 500px;
-            width: 100%;
+        .grafico-container {
+            display: grid;
+            grid-template-rows: 1fr 1fr;
+            gap: 2rem;
+        }
+
+        .grafico-container canvas {
+            width: 500px;
+            height: auto;
         }
     </style>
 </head>
 
 <body>
 
-    <h1>Mapa de Obras</h1>
-    <div id="map"></div>
+    <section id="grafico">
+        <h2>Status das imagens</h2>
+        <div class="grafico-container">
+            <canvas id="imagemChart" width="1000" height="400"></canvas>
+            <canvas id="custoChart" width="1000" height="400"></canvas>
+        </div>
+    </section>
 
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <script>
-        // Cria o mapa centralizado em uma localização padrão
-        var map = L.map('map').setView([-15.7801, -47.9292], 4); // Ponto central do Brasil, ajuste conforme necessário
+        const ctxImagem = document.getElementById('imagemChart').getContext('2d');
+        const imagemChart = new Chart(ctxImagem, {
+            type: 'bar',
+            data: {
+                labels: ['EF', 'P00', 'R00', 'Revisão', 'HOLD'],
+                datasets: [{
+                    label: 'Status das Imagens (%)',
+                    data: [5, 10, 2, 4, 2],
+                    backgroundColor: ['#FF5733', '#33FF57', '#3357FF', '#FF33A6', '#FF8C33'],
+                    borderColor: '#000',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
 
-        // Adiciona um tile layer do OpenStreetMap
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
-
-        // Simulação de dados de obras (substitua com dados reais do banco)
-        var obras = [
-            { nome: "Obra 1", latitude: -23.5505, longitude: -46.6333 },
-            { nome: "Obra 2", latitude: -22.9068, longitude: -43.1729 },
-            { nome: "Obra 3", latitude: -19.9167, longitude: -43.9345 }
-        ];
-
-        // Adiciona marcadores para cada obra
-        obras.forEach(function (obra) {
-            L.marker([obra.latitude, obra.longitude])
-                .addTo(map)
-                .bindPopup(`<b>${obra.nome}</b>`);
+        // Gráfico para Custos
+        const ctxCusto = document.getElementById('custoChart').getContext('2d');
+        const custoChart = new Chart(ctxCusto, {
+            type: 'bar',
+            data: {
+                labels: ['Valor de contrato', 'Custos de produção'],
+                datasets: [{
+                    label: 'Custos (%)',
+                    data: [1, 2],
+                    backgroundColor: ['#FFD700', '#4CAF50'],
+                    borderColor: '#000',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
         });
     </script>
-
 </body>
 
 </html>
