css melhorado do dashboard

--- a/Dashboard/controle_comercial.html
+++ b/Dashboard/controle_comercial.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="index.html" id="voltar"><i class="fa-solid fa-left-long"></i></a>
+        <a href="index.php" id="voltar"><i class="fa-solid fa-left-long"></i></a>
         <h1>Relatório de Valores por Mês</h1>
     </header>
 
